Ajustando API e dockerfile para deploy